# chess_score_sheet

./: .gitignore  Cargo.toml  README.md  install_apt_pachages.sh  main.py  requirements.txt  run_docker.sh  train_model.ipynb
output/: hcs_predict_result.txt  ncs_predict_result.pgn  ncs_predict_result.txt
src/: main.rs  ncs_split.py  predict_ncs_sheet.py  preprocess_hcs.py  text_to_pgn.py  train_hcs_v1.py  util.py
