[package]
name = "chess_event_calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.13.0"
encoding_rs = "0.8.31"
regex = "1"
log = "0.4.17"
env_logger = "0.9.0"
