[package]
name = "chess_event_calendar"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.13.0"
encoding_rs = "0.8.31"
regex = "1"
log = "0.4.17"
env_logger = "0.9.0"
yaml-rust = "0.4.5"
linked-hash-map = "0.5.6"
mysql = { version = "20.1.0" }
